Changelog

v3.1
* Major: Due to compatibility reasons with Gutenberg, the way to call links for internal popupups has changed from '<!--imdb--><!--/imdb-->' to '<span class="lumiere_link_maker"></span>'. Compatibility with the old way currently maintained.
* Major: Finished Gutenberg interface, two buttons added.
* Bug: the lumiere's scripts weren't loaded outside the Lumiere's dedicated pages. Removed checks in lumiere_add_footer_blog()'s lumiere-movies.php, deactivated calls to head and footer construction for imbd-movies.inc.php in lumiere-movies.php and widget (head and footer are already loaded!)
* Bug: removed CSP compliance in js/lumiere_scripts.js and js/highslide-options.js as it prevented a correct running of the highslide popups -> highslide should close windows under CSP
* Bug: Removed adding automatically image in tinyMCE, I can't get rid of it when posting (imdbImg in lumiere_admin_tinymce_editor.js)
* Bug: uninstall wasn't removing taxonomy terms. Simplified the function and it's now working.

v3.0.1
* Gutenberg Block: better layout, implemented selection of either [imdblt] or [imdbltid]
* Gutenberg Block: created a new page gutenberg-search.php for searching movies from gutenberg
* Translation: renamed all calls in __() and the likes from 'imdb' to 'lumiere-movies', changed the language system according to the (new) Wordpress language system
* Explaination:  "Toolbar Lumière admin menu" and "Menu for Lumière options" where a mess in terms of explanation. Rewrote.
* Taxonomy standard template file was missing translation options
* Renamed the widget's name for the wordpress widget page
* Converted onclick=\"return hs.close(this)\" from highslide-options.js into a jQuery function
* Bug: Issues of mobile responsiveness in options-cache.php
* Bug: highslide popup unactive by default. "imdbpopup_highslide" set on true in config
* Bug: banner wrong name